@@ -6,6 +6,7 @@ Revision history for Perl module Exporter::Lite
     - Added github repo to metadata and pod
     - Added README
     - Specified min perl version 5.6.0 in metadata
+    - Set PREREQ_PM, TEST_REQUIRES, CONFIGURE_REQUIRES in Makefile.PL
 
 0.02  Sat Nov 11 18:09:19 CST 2006
     - Added a Changes file. :)
